# 1CRA_HER0

./: .gitignore  .ycm_extra_conf.py
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/hero_msgs/: ArmorDetectionAction.h  ArmorDetectionActionFeedback.h  ArmorDetectionActionGoal.h  ArmorDetectionActionResult.h  ArmorDetectionFeedback.h  ArmorDetectionGoal.h  ArmorDetectionResult.h  BasicExecutor.h  BasicExecutorRequest.h  BasicExecutorResponse.h  BasicExecutorStatus.h  BattlePosition.h  BonusStatus.h  Buffinfo.h  BulletMove.h  BulletsInfo.h  FricWhl.h  FricWhlRequest.h  FricWhlResponse.h  GameResult.h  GameStatus.h  GameSurvivor.h  GimbalAim.h  GimbalAimRequest.h  GimbalAimResponse.h  GimbalAngle.h  GimbalMode.h  GimbalModeRequest.h  GimbalModeResponse.h  GimbalRate.h  GlobalPlannerAction.h  GlobalPlannerActionFeedback.h  GlobalPlannerActionGoal.h  GlobalPlannerActionResult.h  GlobalPlannerFeedback.h  GlobalPlannerGoal.h  GlobalPlannerResult.h  JudgeSysControl.h  JudgeSysControlRequest.h  JudgeSysControlResponse.h  (+25 more)
devel/lib/hero_base/: hero_base_node
devel/lib/hero_costmap/: test_costmap
devel/lib/hero_decision/: behavior_test_node  collective_decision  point_navigation  point_navigation_pub  point_navigation_sub  simu_basic_executor  test_pub  test_sub
devel/lib/hero_interface/: hero_interface
devel/lib/hero_judgesys/: judgesys_control_node
devel/lib/hero_localization/: judgesys_control_node  localization_node
devel/lib/hero_multistage/: robot_physics_node
devel/lib/hero_planning/: global_planner_node  global_planner_test  local_planner_node  teb_test  vel_converter
devel/lib/pkgconfig/: hero_base.pc  hero_bringup.pc  hero_common.pc  hero_costmap.pc  hero_decision.pc  hero_interface.pc  hero_judgesys.pc  hero_localization.pc  hero_mapping.pc  hero_msgs.pc  hero_multistage.pc  hero_planning.pc  rplidar_ros.pc  test.pc
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/test/: testtt_pub  testtt_sub
src/hero_base/: CMakeLists.txt  hero_base_config.h  hero_base_node.cpp  package.xml  ros_dep.h
src/hero_base/chassis/: chassis.cpp  chassis.h
src/hero_base/gimbal/: gimbal.cpp  gimbal.h
src/hero_base/hero_sdk/: sdk.h
src/hero_base/hero_sdk/dispatch/: dispatch.h  execution.cpp  execution.h  handle.cpp  handle.h
src/hero_base/hero_sdk/hardware/: hardware_interface.h  serial_device.cpp  serial_device.h
src/hero_base/hero_sdk/protocol/: protocol.cpp  protocol.h  protocol_define.h
src/hero_base/hero_sdk/utilities/: circular_buffer.h  crc.h  log.h  memory_pool.h
src/hero_base/referee_system/: referee_system.cpp  referee_system.h
src/hero_bringup/: CMakeLists.txt
src/hero_bringup/launch/: hero_point_navigation.launch  hero_stage_bringup.launch  hero_stage_mapping.launch
src/hero_bringup/maps/: icra2020.yaml
src/hero_bringup/worlds/: icra2020.world
src/hero_common/: CMakeLists.txt  package.xml
src/hero_common/include/alg_factory/: CMakeLists.txt  algorithm_factory.h
src/hero_common/include/hero_map/: CMakeLists.txt  hero_map.h
src/hero_common/include/hero_math/: CMakeLists.txt  geometry.h  math.h
src/hero_common/include/io/: io.h
src/hero_common/include/math/: CMakeLists.txt
src/hero_common/include/state/: CMakeLists.txt  command_code.h  error_code.h  node_state.h
src/hero_common/include/timer/: CMakeLists.txt
src/hero_common/math/: geometry.h  math.h
src/hero_costmap/: CMakeLists.txt  package.xml
src/hero_costmap/src/: footprint.cpp  (+13 more)
src/hero_decision/: CMakeLists.txt  behavior_test.cpp  package.xml
src/hero_decision/behaviac_ws/behaviac_generated/types/internal/: Robot.cpp  Robot.h  behaviac_agent_headers.h  behaviac_agent_member_visitor.h  behaviac_agent_meta.cpp  behaviac_agent_meta.h
src/hero_decision/behaviac_ws/exported/: DemoBT.xml
src/hero_decision/behaviac_ws/exported/meta/: my_bt.meta.xml
src/hero_decision/behavior_tree/: behavior_node.h  behavior_state.h  behavior_tree.h
src/hero_decision/blackboard/: blackboard.h
src/hero_decision/example_behavior/: back_boot_area_behavior.h  chase_behavior.h  escape_behavior.h  goal_behavior.h  line_iterator.h  patrol_behavior.h  search_behavior.h
src/hero_decision/executor/: chassis_executor.cpp  chassis_executor.h  gimbal_executor.cpp  gimbal_executor.h  point_navigation.cpp
src/hero_decision/proto/: decision.pb.cc  decision.pb.h  decision.proto
src/hero_decision/simulation/: basic_executor.cpp  basic_executor.h  collective_decision.cpp  collective_decision.h
src/hero_decision/src/: point_navigation_pub.cpp  test_pub.cpp
src/hero_interface/: CMakeLists.txt  mainpage.dox  package.xml
src/hero_judgesys/: CMakeLists.txt  package.xml
src/hero_judgesys/include/: judgesys_control_node.h  judgesys_robot.h
src/hero_judgesys/src/: judgesys_control_node.cpp  judgesys_robot.cpp
src/hero_localization/: CMakeLists.txt  localization_config.h  localization_math.cpp  localization_math.h  localization_node.cpp  localization_node.h  log.h  types.h
src/hero_mapping/: CMakeLists.txt  package.xml
src/hero_msgs/: CMakeLists.txt  package.xml
src/hero_msgs/action/: GlobalPlanner.action
src/hero_msgs/msg/: BasicExecutorStatus.msg  BattlePosition.msg  BulletMove.msg  BulletsInfo.msg  JudgeSysShootHit.msg  MovePoint.msg  RobotPosition.msg
src/hero_msgs/msg/referee_system/: Buffinfo.msg  RobotStatus.msg
src/hero_msgs/srv/: BasicExecutor.srv  GimbalAim.srv  JudgeSysControl.srv  ShootCmd.srv
src/hero_multistage/: CMakeLists.txt  package.xml
src/hero_multistage/config/rviz/: stage_ros.rviz  stage_ros_multibot.rviz  stage_ros_robot_0.rviz  stage_ros_robot_1.rviz  stage_ros_robot_2.rviz  stage_ros_robot_3.rviz
src/hero_multistage/include/: bullet.h  robot_physics.h  robot_physics.h.autosave  robot_tf.h
src/hero_multistage/launch/: launch_robot.launch  multi_stageros.launch  stage_bringup.launch
src/hero_multistage/maps/: icra2020.pgm  icra2020.yaml  map.jgp
src/hero_multistage/src/: bullet.cpp  robot_physics.cpp  robot_tf.cpp
src/hero_multistage/worlds/: battlefield.yaml  icra2020.world
src/hero_planning/: CMakeLists.txt
(+415 files in other folders)
