<package>
    <name>hero_common</name>
    <version>1.0.0</version>
    <description>
        The hero common package provides all the common functions for RoboMaster AI Robot
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>hero_msgs</build_depend>
    <build_depend>rospy</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>hero_msgs</run_depend>
    <run_depend>rospy</run_depend>


    <export>
    </export>

</package>
